Fix up pvcd.conf a bit

--- a/pvcd.conf
+++ b/pvcd.conf
@@ -1,7 +1,27 @@
-# pvcd configuration file
+# pvcd cluster configuration file
+#
+# This configuration file lists all nodes that should be running in the cluster and provides
+# basic configuration information for them.
+#
+# Nodes can be specified individually, e.g.
+#    [node1.domain]
+#    ...
+#    [node2.domain]
+#    ...
+# Or a default configuration can be specified
+#    [*]
+#    ipmi_hostname = 
+
 [test1.i.bonilan.net]
-zookeeper = localhost:2181
+zookeeper = 127.0.0.1:2181
 keepalive_interval = 5
 ipmi_hostname = test1-lom.i.bonilan.net
+ipmi_username = admin
+ipmi_password = admin
+
+[test2.i.bonilan.net]
+zookeeper = localhost:2181
+keepalive_interval = 5
+ipmi_hostname = test2-lom.i.bonilan.net
 ipmi_username = admin
 ipmi_password = admin
