Update pfcd.conf file

--- a/pvcd.conf
+++ b/pvcd.conf
@@ -10,18 +10,21 @@
 #    ...
 # Or a default configuration can be specified
 #    [*]
-#    ipmi_hostname = 
+#
+# The following values are required for each host or in a default section:
+#    zookeeper: the IP+port of the Zookeper instance (defaults to 127.0.0.1:2181)
+#    keepalive_interval: the interval between keepalives and for dead node timeout (defaults to 5)
+#    ipmi_hostname: the IPMI hostname for fencing (defaults to <shortname>-lom.<domain>)
+#    ipmi_username: username to connect to IPMI
+#    ipmi_password: password to connect to IPMI
 
-[test1.i.bonilan.net]
+[*]
 zookeeper = 127.0.0.1:2181
 keepalive_interval = 5
-ipmi_hostname = test1-lom.i.bonilan.net
+ipmi_hostname =
 ipmi_username = admin
 ipmi_password = admin
 
+[test1.i.bonilan.net]
+
 [test2.i.bonilan.net]
-zookeeper = localhost:2181
-keepalive_interval = 5
-ipmi_hostname = test2-lom.i.bonilan.net
-ipmi_username = admin
-ipmi_password = admin
