More work to make stuff work right

--- a/pvcd.conf
+++ b/pvcd.conf
@@ -18,13 +18,14 @@
 #    ipmi_username: username to connect to IPMI
 #    ipmi_password: password to connect to IPMI
 
-[*]
+[default]
 zookeeper = 127.0.0.1:2181
 keepalive_interval = 5
-ipmi_hostname =
 ipmi_username = admin
 ipmi_password = admin
 
 [test1.i.bonilan.net]
+ipmi_hostname = test1-lom.m.bonilan.net
 
 [test2.i.bonilan.net]
+ipmi_hostname = test2-lom.m.bonilan.net
