--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ X-Python3-Version: >= 3.2
 
 Package: pvc-daemon
 Architecture: all
-Depends: python3-kazoo, python3-libvirt, python3-psutil, python3-apscheduler
+Depends: python3-kazoo, python3-libvirt, python3-psutil, python3-apscheduler, ipmitool, libvirt-daemon-system
 Suggests: pvc-client
 Description: Parallel Virtual Cluster daemon (Python 3)
  The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters,
