--- a/pvcd.service
+++ b/pvcd.service
@@ -9,6 +9,7 @@ WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
 Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.conf
 ExecStart = /usr/share/pvc/pvcd.py
+ExecReload = /bin/kill -HUP $MAINPID
 Restart = on-failure
 
 [Install]
