--- a/virtualization-daemon/pvcvd.service
+++ b/virtualization-daemon/pvcvd.service
@@ -1,14 +1,14 @@
-# Parallel Virtual Cluster node daemon unit file
+# Parallel Virtual Cluster virtualization daemon unit file
 [Unit]
-Description = Parallel Virtual Cluster node daemon
+Description = Parallel Virtual Cluster virtualization daemon
 After = network-online.target libvirtd.service zookeeper.service
 
 [Service]
 Type = simple
 WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
-Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.conf
-ExecStart = /usr/share/pvc/pvcd.py
+Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcvd.conf
+ExecStart = /usr/share/pvc/pvcvd.py
 Restart = on-failure
 
 [Install]
