--- a/debian/control
+++ b/debian/control
@@ -20,9 +20,7 @@ Architecture: all
 Depends: pvc-daemon-common, python3-libvirt, ipmitool, libvirt-daemon-system
 Suggests: pvc-client
 Description: Parallel Virtual Cluster virtualization daemon (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters,
- including full control of running VMs, definitions, and hypervisors (including fencing via
- IPMI). This package provides the daemon component for a hypervisor node.
+ The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
  .
  This package installs the PVC virtualization daemon
 
@@ -31,18 +29,23 @@ Architecture: all
 Depends: pvc-daemon-common, python3-libvirt, ipmitool, libvirt-daemon-system
 Suggests: pvc-client, pvc-virtualization-daemon
 Description: Parallel Virtual Cluster network daemon (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters,
- including full control of running VMs, definitions, and hypervisors (including fencing via
- IPMI). This package provides the daemon component for networking on a hypervisor node.
+ The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
  .
  This package installs the PVC network daemon
 
-Package: pvc-client
+Package: pvc-client-common
 Architecture: all
-Depends: python3-kazoo, python3-libvirt, python3-psutil, python3-click, python3-lxml
+Depends: python3-kazoo, python3-psutil, python3-click, python3-lxml
+Description: Parallel Virtual Cluster common client libraries (Python 3)
+ The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
+ .
+ This package installs the common client libraries
+
+Package: pvc-cli-client
+Architecture: all
+Depends: pvc-client-common
 Description: Parallel Virtual Cluster client (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters,
- including full control of running VMs, definitions, and hypervisors (including fencing via
- IPMI). This package provides the client command-line interface.
+ The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
  .
  This package installs the PVC command-line client
+
