--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Description: Parallel Virtual Cluster network daemon (Python 3)
 
 Package: pvc-router-daemon
 Architecture: all
-Depends: pvc-daemon-common
+Depends: pvc-daemon-common, arping
 Description: Parallel Virtual Cluster router daemon (Python 3)
  The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
  .
