--- a/router-daemon/pvcrd.service
+++ b/router-daemon/pvcrd.service
@@ -9,6 +9,7 @@ WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
 Environment = PVCRD_CONFIG_FILE=/etc/pvc/pvcrd.conf
 ExecStart = /usr/share/pvc/pvcrd.py
+KillSignal = SIGINT
 Restart = on-failure
 
 [Install]
