Massive rejigger into single daemon
Completely restructure the daemon code to move the 4 discrete daemons
into a single daemon that can be run on every hypervisor. Introduce the
idea of a static list of "coordinator" nodes which are configured at
install time to run Zookeeper and FRR in router mode, and which are
allowed to take on client network management duties (gateway, DHCP, DNS,
etc.) while also allowing them to run VMs (i.e. no dedicated "router"
nodes required).

--- a/debian/control
+++ b/debian/control
@@ -6,40 +6,14 @@ Standards-Version: 3.9.8
 Homepage: https://www.boniface.me
 X-Python3-Version: >= 3.2
 
-Package: pvc-daemon-common
+Package: pvc-daemon
 Architecture: all
-Depends: python3-kazoo, python3-psutil, python3-apscheduler
-Suggests: pvc-virtualization-daemon, pvc-cli-client
-Description: Parallel Virtual Cluster common daemon libraries (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
- .
- This package installs the common daemon libraries
-
-Package: pvc-virtualization-daemon
-Architecture: all
-Depends: pvc-daemon-common, python3-libvirt, ipmitool, libvirt-daemon-system
-Suggests: pvc-cli-client
+Depends: python3-kazoo, python3-psutil, python3-apscheduler, python3-libvirt, ipmitool, libvirt-daemon-system, arping, bridge-utils, dnsmasq
+Suggests: pvc-client-cli
 Description: Parallel Virtual Cluster virtualization daemon (Python 3)
  The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
  .
- This package installs the PVC virtualization daemon
-
-Package: pvc-network-daemon
-Architecture: all
-Depends: pvc-daemon-common, python3-libvirt, ipmitool, libvirt-daemon-system
-Suggests: pvc-cli-client, pvc-virtualization-daemon
-Description: Parallel Virtual Cluster network daemon (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
- .
- This package installs the PVC network daemon
-
-Package: pvc-router-daemon
-Architecture: all
-Depends: pvc-daemon-common, arping
-Description: Parallel Virtual Cluster router daemon (Python 3)
- The Parallel Virtual Cluster provides a management solution for QEMU/KVM virtual clusters.
- .
- This package installs the PVC router daemon
+ This package installs the PVC node daemon
 
 Package: pvc-client-common
 Architecture: all
@@ -49,7 +23,7 @@ Description: Parallel Virtual Cluster common client libraries (Python 3)
  .
  This package installs the common client libraries
 
-Package: pvc-cli-client
+Package: pvc-client-cli
 Architecture: all
 Depends: pvc-client-common
 Description: Parallel Virtual Cluster client (Python 3)
