--- a/node-daemon/pvcd.service
+++ b/node-daemon/pvcd.service
@@ -1,4 +1,4 @@
-# Parallel Virtual Cluster virtualization daemon unit file
+# Parallel Virtual Cluster node daemon unit file
 [Unit]
 Description = Parallel Virtual Cluster node daemon
 After = network-online.target libvirtd.service zookeeper.service
