--- a/node-daemon/pvcd.service
+++ b/node-daemon/pvcd.service
@@ -9,7 +9,7 @@ WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
 Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.conf
 ExecStart = /usr/share/pvc/pvcd.py
-Restart = on-failure
+Restart = never
 
 [Install]
 WantedBy = multi-user.target
