--- a/node-daemon/pvcd.service
+++ b/node-daemon/pvcd.service
@@ -7,7 +7,7 @@ After = network-online.target libvirtd.service zookeeper.service mariadb.service
 Type = simple
 WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
-Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.conf
+Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.yaml
 ExecStart = /usr/share/pvc/pvcd.py
 Restart = never
 
