Implement domain log watching
Implements the ability for a client to watch almost-live domain
console logs from the hypervisors. It does this using a deque-based
"tail -f" mechanism (with a configurable buffer per-VM) that watches
the domain console logfile in the (configurable) directory every
half-second. It then stores the current buffer in Zookeeper when
changed, where a client can then request it, either as a static piece
of text in the `less` pager, or via a similar "tail -f" functionality
implemented using fixed line splitting and comparison to provide a
generally-seamless output.

Enabling this feature requires each guest VM to implement a Libvirt
serial log and write its (text) console to it, for example using the
default logging directory:

```
<serial type='pty'>
    <log file='/var/log/libvirt/vmname.log' append='off'/>
<serial>
```

The append mode can be either on or off; on grows files unbounded,
off causes the log (and hence the PVC log data) to be truncated on
initial VM startup from offline. The administrator must choose how
they best want to handle this until Libvirt implements their own
clog-type logging format.

--- a/node-daemon/pvcd.sample.yaml
+++ b/node-daemon/pvcd.sample.yaml
@@ -111,12 +111,16 @@ pvc:
         dynamic_directory: "/run/pvc"
         # log_directory: Logging directory
         log_directory: "/var/log/pvc"
+        # console_log_directory: Libvirt console logging directory
+        console_log_directory: "/var/log/libvirt"
       # logging: PVC logging configuration
       logging:
         # file_logging: Enable or disable logging to files under log_directory
         file_logging: True
         # stdout_logging: Enable or disable logging to stdout (i.e. journald)
         stdout_logging: True
+        # console_log_lines: Number of console log lines to store in Zookeeper per VM
+        console_log_lines: 1000
       # networking: PVC networking configuration
       # OPTIONAL if enable_networking: False
       networking:
