Add node autoflush service and target
Add a systemd service to manage node flush/unflush, useful during
system startup and shutdown to avoid requiring administrator
intervention for this to occur. This is optional and the service is
not enabled by default, and the postinst script informs the
administrator of this.

Also adds a systemd target to collect the two service units together
and provide an easy way to flush+shutdown or startup+unflush the
entire PVC system.

Closes #28

--- a/node-daemon/pvcd.service
+++ b/node-daemon/pvcd.service
@@ -1,4 +1,5 @@
 # Parallel Virtual Cluster node daemon unit file
+
 [Unit]
 Description = Parallel Virtual Cluster node daemon
 After = network-online.target libvirtd.service zookeeper.service
@@ -12,4 +13,4 @@ ExecStart = /usr/share/pvc/pvcd.py
 Restart = on-failure
 
 [Install]
-WantedBy = multi-user.target
+WantedBy = pvcd.target
