Perform additional tweaks to units
Use RemainAfterExit to avoid pvc-flush from auto-stopping immediately.

Use PartOf to tie services to the target itself.

Use --wait on flush to avoid daemon stopping before flush is complete.

--- a/node-daemon/pvc-flush.service
+++ b/node-daemon/pvc-flush.service
@@ -3,12 +3,14 @@
 [Unit]
 Description = Parallel Virtual Cluster autoflush daemon
 After = pvcd.service
+PartOf = pvcd.target
 
 [Service]
 Type = oneshot
+RemainAfterExit = true
 WorkingDirectory = /usr/share/pvc
 ExecStart = /usr/bin/pvc node unflush
-ExecStop = /usr/bin/pvc node flush
+ExecStop = /usr/bin/pvc node flush --wait
 
 [Install]
 WantedBy = pvcd.target
