--- a/node-daemon/pvcd.sample.yaml
+++ b/node-daemon/pvcd.sample.yaml
@@ -124,31 +124,27 @@ pvc:
       # networking: PVC networking configuration
       # OPTIONAL if enable_networking: False
       networking:
-        # devices: Interface devices configuration
-        devices:
-          # upstream: Upstream physical interface device
-          upstream:
-            # name: Upstream interface name
-            name: ens4
-            # mtu: Upstream interface MTU; use 9000 for jumbo frames (requires switch support)
-            mtu: 1500
-          # cluster: Cluster (VNIC) physical interface device
-          cluster:
-            # name: Cluster (VNIC) interface name
-            name: ens4
-            # mtu: Cluster (VNIC) interface MTU; use 9000 for jumbo frames (requires switch support)
-            mtu: 1500
-          # storage: Storage (Ceph OSD) physical interface device
-          storage:
-            # name: Storace (Ceph OSD) interface name
-            name: ens4
-            # mtu: Storage (Ceph OSD) interface MTU; use 9000 for jumbo frames (requires switch support)
-            mtu: 1500
-        # addresses: Special network addresses; by-id denotes "address octet equals host number", e.g. .3 for host3
-        addresses:
-          # upstream: Network address for upstream network, options: None, by-id, <static>/<mask>
-          upstream: None
-          # cluster: Network address for cluster network, options: by-id, <static>/<mask>
-          cluster: by-id
-          # storage: Network address for storage network, options: by-id, <static>/<mask>
-          storage: by-id
+        # upstream: Upstream physical interface device
+        upstream:
+          # name: Upstream interface name
+          name: ens4
+          # mtu: Upstream interface MTU; use 9000 for jumbo frames (requires switch support)
+          mtu: 1500
+          # address: Network address for upstream network, options: None, by-id, <static>/<mask>
+          address: None
+        # cluster: Cluster (VNIC) physical interface device
+        cluster:
+          # name: Cluster (VNIC) interface name
+          name: ens4
+          # mtu: Cluster (VNIC) interface MTU; use 9000 for jumbo frames (requires switch support)
+          mtu: 1500
+          # address: Network address for cluster network, options: by-id, <static>/<mask>
+          address: by-id
+        # storage: Storage (Ceph OSD) physical interface device
+        storage:
+          # name: Storace (Ceph OSD) interface name
+          name: ens4
+          # mtu: Storage (Ceph OSD) interface MTU; use 9000 for jumbo frames (requires switch support)
+          mtu: 1500
+          # address: Network address for storage network, options: by-id, <static>/<mask>
+          address: by-id
